--- a/Backend/Backend/Backend/appsettings.json
+++ b/Backend/Backend/Backend/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqlServerDev": "Server=192.168.1.100,11433;Database=BookDb;user id=sa;password=@War23ner10;Trusted_Connection=False;TrustServerCertificate=False;Encrypt=false;ConnectRetryCount=0"
+  }
 }
