Adicionado healthChecks e Proxy no Angular

--- a/Backend/Backend/Backend/appsettings.json
+++ b/Backend/Backend/Backend/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqlServerDev": "Server=192.168.1.100,11433;Database=LivroDb;user id=sa;password=@War23ner10;Trusted_Connection=False;TrustServerCertificate=False;Encrypt=false;ConnectRetryCount=0"
+    "SqlServerDev": "Server=192.168.1.100,11433;Database=LivroDb;user id=sa;password=@War23ner10;Trusted_Connection=False;TrustServerCertificate=False;Encrypt=false;ConnectRetryCount=0",
+    "SqlServerHealthCheck": "Server=192.168.1.100,11433;Database=HealthCheckDb;user id=sa;password=@War23ner10;Trusted_Connection=False;TrustServerCertificate=False;Encrypt=false;ConnectRetryCount=0"
   }
 }
