--- a/Backend/Backend/Core/Core.csproj
+++ b/Backend/Backend/Core/Core.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\Model\Model.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
